Bug 73235 - Other: When entering a formula using the wizard and range is selected using a mouse, incorrect text is filled in the formula
Summary: Other: When entering a formula using the wizard and range is selected using a...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.1 rc
Hardware: All All
: high blocker
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: BSA target:4.3.0 target:4.2.0
Keywords: regression
: 72962 (view as bug list)
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2014-01-02 18:56 UTC by rascal
Modified: 2014-01-29 18:23 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (13.99 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-01-02 18:56 UTC, rascal
Details
screenshot of the error (33.17 KB, image/png)
2014-01-02 19:01 UTC, rascal
Details
Function wizard - selecting cell by mouse (87.33 KB, image/png)
2014-01-24 06:17 UTC, Laube Roman
Details
FUnction wizard - argument of function after OK (33.64 KB, image/png)
2014-01-24 06:18 UTC, Laube Roman
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rascal 2014-01-02 18:56:43 UTC
Created attachment 91430 [details]
sample file

Problem description: 

Steps to reproduce:
1. click on "formula wizard" button
2. select a forumla, e.g. SUM
3. click next
4. click in the first argument textbox, select an area in the spreadsheet using mouse-drag.
5. click OK

Current behavior:
Instead of =SUM(A1:A2) LO creates =SUM(#REF!.A2) which is not correct

Expected behavior:
=SUM(A1:A2)
              
Operating System: Windows 7
Version: 4.2.0.1 rc
Last worked in: 4.1.2.3 release
Comment 1 Jorendc 2014-01-02 18:59:12 UTC
Failed to reproduce this, tested using Windows 8.1 with LibreOffice Version: 4.3.0.0.alpha0+
Build ID: 8102d45911bf3c47ce7ee15d3db89b0024c3bff8
TinderBox: Win-x86@39, Branch:master, Time: 2013-12-29_09:34:00

Kind regards,
Joren
Comment 2 rascal 2014-01-02 19:01:00 UTC
Created attachment 91432 [details]
screenshot of the error
Comment 3 rascal 2014-01-02 19:02:14 UTC
Also I deleted user profile, and reinstalled 4.2.0.1 and the problem exists.
My language version is czech.
Comment 4 rascal 2014-01-02 19:24:48 UTC
Reverted to 4.1.4.2 and it works fine, no issues.
Comment 5 Jorendc 2014-01-02 19:32:54 UTC
Confirmed, tested using Windows 8.1 with LibreOffice Version: 4.2.0.1
Build ID: 7bf567613a536ded11709b952950c9e8f7181a4a

So, probably fixed. But lets mark it as NEW for the moment.
Comment 6 Jorendc 2014-01-02 19:35:35 UTC
Release Candidate 2 is going to be released next week (https://wiki.documentfoundation.org/ReleasePlan/4.2#4.2.0_release). You might want to retest using that version :-).

Kind regards,
Joren
Comment 7 rascal 2014-01-05 20:00:34 UTC
I'll try RC2 as soon as it's released.
Comment 8 rascal 2014-01-09 17:33:59 UTC
Just tested on RC2 (4.2.0.2 windows version, build ID cd65d6220c5694ee7012d7863bcde3455c9e3c30 ) and the problem still occurs.
Will check with clean profile and update ticket.
Comment 9 rascal 2014-01-09 17:44:59 UTC
Deleted user profile, problem still occurs in RC2.
Not able to insert functions arguments with mouse drag, when using the functions wizard.
Comment 10 Alex Thurgood 2014-01-10 16:18:38 UTC
Hi,

Saw this very behaviour on my Linux debug build from master today.

Alex
Comment 11 Alex Thurgood 2014-01-10 16:24:01 UTC
However, it wasn't with the SUM function, but SEARCH

I can't reproduce with SUM on :

Version: 4.3.0.0.alpha0+
Build ID: 46cf9aed39ac50219a4e8dbcf0b16359cb3644ee

Alex
Comment 12 Alex Thurgood 2014-01-10 16:29:25 UTC
Hmm, tried your sheet, could not reproduce.

Alex
Comment 13 rascal 2014-01-12 18:46:37 UTC
Tried several languages and it seems to be different in different languages. I tried English-UK, Czech, German and French
Search gave an error in all of those. E.g. in French, only search. SUM (somme) was OK, matrix transposition and multiplication also.
In German more errors occured then in czech and english.
This is very weird.
Tested on
Version: 4.2.0.2
Build ID: cd65d6220c5694ee7012d7863bcde3455c9e3c30
Comment 14 Laube Roman 2014-01-24 06:16:22 UTC
I can confirm this bug on
Version: 4.2.0.3
Build ID: c63c03decdf780d8fb80823950665b782ec9ecd0

I have attached 2 screenshots of this error. Picture "function_wizard-selecting_cell" shows argument of ABS function after selecting cell by mouse. Picture "function_wizard-after_OK" shows how argument of ABS function changes after clicking OK button.
Comment 15 Laube Roman 2014-01-24 06:17:19 UTC
Created attachment 92714 [details]
Function wizard - selecting cell by mouse
Comment 16 Laube Roman 2014-01-24 06:18:19 UTC
Created attachment 92715 [details]
FUnction wizard - argument of function after OK
Comment 17 Alex Thurgood 2014-01-24 11:03:25 UTC
Adding Calc devs to CC. Anyone got any ideas as to what might be happening ?

Alex
Comment 18 Eike Rathke (retired, only occasionally showing up) 2014-01-24 15:17:25 UTC
Taking.
Comment 19 Eike Rathke (retired, only occasionally showing up) 2014-01-24 15:36:41 UTC
Same happens using the Sum button left of the input line.
Comment 20 Eike Rathke (retired, only occasionally showing up) 2014-01-24 16:51:16 UTC
This is due to uninitialized memory, which is the reason why some experience it and some don't. Actually all references initialized as relative suffer from it. This is a blocker for Calc.
Comment 21 Commit Notification 2014-01-24 17:18:58 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=70abaf45eac49405aee70bbad13bcda75d8a9c15

resolved fdo#73235 initialize reference flags



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 22 Eike Rathke (retired, only occasionally showing up) 2014-01-24 17:26:09 UTC
Pending review
for 4-2 at https://gerrit.libreoffice.org/7634
for 4-2-0 at
Comment 23 Commit Notification 2014-01-24 17:26:33 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=16d0b4020a1987accea37536defb2eb0fa7dd27f&h=libreoffice-4-2

resolved fdo#73235 initialize reference flags


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 24 Eike Rathke (retired, only occasionally showing up) 2014-01-24 17:27:01 UTC
4-2-0 at https://gerrit.libreoffice.org/7635
Comment 25 Alex Thurgood 2014-01-25 10:07:51 UTC
*** Bug 72962 has been marked as a duplicate of this bug. ***
Comment 26 Commit Notification 2014-01-26 17:55:21 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=db8d1d0fda64092188a8b4a3e7a8dead4026a780&h=libreoffice-4-2-0

resolved fdo#73235 initialize reference flags


It will be available already in LibreOffice 4.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 27 rascal 2014-01-29 18:23:08 UTC
Did a quick tests on 4.2.0.4 and it seems to be working fine :)