resolved fdo#73235 initialize reference flags

References initialized via ScSingleRefData::InitAddressRel() and
ScComplexRefData::InitRangeRel() didn't have their flags memory
initialized, leading to tab/col/row reference may had been flagged as
deleted or other quirks.

This also fixes fdo#72605

Change-Id: If5e9f4c3a9171f068f7986d2bd6b4b312df3c37e